# cmbnt-test

./: .travis.yml  Dockerfile  Makefile  README.md  pred-serv.cabal  stack.yaml
analysis/: Main.hs  plot_samples.R  plot_samples_grid.R
app/: Main.hs  Main2.hs
data/: model.csv  samples.csv
docker/deploy/: Dockerfile
docker/dev/: Dockerfile
src/: Lib.hs
src/Lib/: Math.hs  Types.hs
test/: LibSpec.hs
