name:                pred-serv
version:             0.1.0.0
-- synopsis:            
-- description:
homepage:            https://github.com/ocramz/pred-serv
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco@gmail.com
copyright:           2019 Marco Zocca
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.3

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Lib.Types
                       Lib.Math
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.4.2.0
                     , cassava >= 0.5.1.0
                     , bytestring
                     , text
                     , vector

executable pred-serv
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , pred-serv
                     , aeson >= 1.4.2.0
                     , bytestring                 
                     , http-types
                     , lucid
                     , lucid-extras  >= 0.2.2
                     , mtl
                     , optparse-applicative
                     , rigel-viz >= 0.2
                     , scotty
                     , stm
                     , text
                     , wai-extra
                     , warp >= 3.2.25

-- executable pred-viz
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      analysis
--   main-is:             Main.hs
--   build-depends:       base
--                      , pred-serv
--                      , aeson
--                      , bytestring
--                      , cassava

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base
                     , pred-serv
                     , bytestring
                     , hspec

source-repository head
  type:     git
  location: https://github.com/ocramz/cmbnt-test
